--- a/Semana05-02.ipynb
+++ b/Semana05-02.ipynb
@@ -369,6 +369,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# while\n",
+    "# Permite ejecutar un conjunto de acciones mientras se cumpla una condición"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejemplo:\n",
+    "numero = 1\n",
+    "fin = 10\n",
+    "while numero <= fin:\n",
+    "    print(numero)\n",
+    "    numero+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
